--- a/include/UserSettings.h.template
+++ b/include/UserSettings.h.template
@@ -9,3 +9,6 @@
 #define WIFI_STATIC_MASK     "255.255.255.0"
 #define WIFI_STATIC_GATEWAY  "255.255.255.0"
 #define WIFI_STATIC_DNS      "1.1.1.1"
+
+#define BASE_URL "http://openhabhost:8080/"
+#define SITEMAP_NAME "mysitemap"
