--- a/include/UserSettings.h.template
+++ b/include/UserSettings.h.template
@@ -10,5 +10,6 @@
 #define WIFI_STATIC_GATEWAY  "255.255.255.0"
 #define WIFI_STATIC_DNS      "1.1.1.1"
 
-#define BASE_URL "http://openhabhost:8080/"
+// Do not add a trailing slash on the URL
+#define BASE_URL "http://openhabhost:8080"
 #define SITEMAP_NAME "mysitemap"
