We are using a Riverdi 7 inches display

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,8 @@ upload_port=COM3
 monitor_port=COM3
 upload_speed = 921600
 build_type = debug
-;build_flags = 
+build_flags = 
+    -D EVE_RVT70H
 ;    -D BOARD_HAS_PSRAM
 ;    -mfix-esp32-psram-cache-issue
 ;    -fconserve-stack
