Must lock on a given platform version to avoid surprises

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ ESP32_libs =
     https://github.com/obones/FT800-FT813.git#EVEOpenHAB
 
 [ESP32_base]
-platform = espressif32
+platform = espressif32@3.2.0
 board = esp32dev
 lib_deps = 
 	${common.ESPlibs}
