--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,11 @@ lib_ldf_mode = deep
 [common]
 ESPlibs =
     bblanchon/ArduinoJson@6.18.0
-    AsyncTCP
+    ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer.git#master
-    https://github.com/boblemaire/asyncHTTPrequest.git#master
+    ;https://github.com/boblemaire/asyncHTTPrequest.git#master
+    ;https://github.com/boblemaire/esp32HTTPrequest#main
+    https://github.com/obones/esp32HTTPrequest#client_buffer_size
 
 ESP32_libs = 
     https://github.com/lorol/LITTLEFS.git#master
